working with Edit,comment and like

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="/scripts/jquery-3.4.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/styles/index.css" />
+  <link rel="stylesheet" href="/styles/animate.css" />
   <link href="https://fonts.googleapis.com/css?family=Dokdo|Fredoka+One|Playfair+Display+Stoke&display=swap" rel="stylesheet">
 
 </head>
@@ -28,7 +29,7 @@
 
 <!--Modal for sign in-->
 
-<div class="modal animated fadeIn mt-5" id="signin-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal animated fadeIn slower mt-5" id="signin-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header text-center">
@@ -58,7 +59,7 @@
 
 <!--modal for sign up-->
 
-<div class="modal animated fadeIn mt-5" id="signup-modal" tabindex="-1" role="dialog"  aria-hidden="true">
+<div class="modal animated fadeIn slower mt-5" id="signup-modal" tabindex="-1" role="dialog"  aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header text-center">
