Complete the edit and save functionality

--- a/html/post.html
+++ b/html/post.html
@@ -23,10 +23,11 @@
         <p class="middleText">Explore,Imagine,Create</p>
     </div>
   <!--code for the posts-->
-    <div class="container-fluid">
-      <h3 class="text-center mb-3" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">The legancy of Jimi Hendrix</h3>
+    <div class="container-fluid" id="main-box">
+      <h3 class="text-center mb-3" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;" id="post-title">The legancy of Jimi Hendrix</h3>
       <h3 style="font-family: Edwardian Script ITC;font-weight: bolder;font-size: 30px;float: left;">Jimi</h3>
       <button class="btn text-light edit-btn" id="edit-btn">Edit <i class='fa fa-edit' id="edit-icon"></i></button>
+      <button class="btn text-light save-btn" id="save-btn">Save <i class="fa fa-save"></i></button>
       <div class="container-fluid text-justify" id="post-text1">
         <!-- <textarea readonly id="blog-text" rows="13" cols="225" class="d-none"></textarea> -->
         <p style="
