--- a/html/post.html
+++ b/html/post.html
@@ -57,7 +57,7 @@
 
 
 <!--Modal for sign in-->
-<div class="modal animated fadeIn slower mt-5" id="signin-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal animated fadeIn mt-5" id="signin-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header text-center">
@@ -87,7 +87,7 @@
 
 <!--modal for sign up-->
 
-<div class="modal animated fadeIn slower mt-5" id="signup-modal" tabindex="-1" role="dialog"  aria-hidden="true">
+<div class="modal animated fadeIn mt-5" id="signup-modal" tabindex="-1" role="dialog"  aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header text-center">
