Count the like button

--- a/html/post.html
+++ b/html/post.html
@@ -38,6 +38,7 @@
     </div>
     <div class="container-fluid like-comment-box">
       <button class="btn text-light like-btn"> <i class='fa fa-thumbs-up'></i> Like</button>
+      <p id="like-count" style="display: none;letter-spacing: 1px;float: left;clear: left;"></p>
       <p style="letter-spacing: 2px;float: left;clear: left;">Be the first one to like this</p>
       <form id="comment-form">
         <textarea rows="5" cols="100" placeholder="Leave a comment...." style="float: left;clear: left;margin-bottom: 7px;" id="txt-area" required></textarea>
